--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "reactjs-popup": "^2.0.6",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
